[Lotus34] Include mergedFrom property
mergedFrom lists the provinces which existed before merging.
